<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/list_nasabah_container"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp">

        <TextView
            android:id="@+id/tv_nama_nasabah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_nasabah"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_ttl_nasabah"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempat_tanggal_lahir"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_ktp_nasabah"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomor_ktp"
            android:layout_marginBottom="5dp"
            android:textSize="13sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>