<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="50dp"
    android:background="@color/LightBlue"
    tools:context=".userHandler.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/nothing"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar_login"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView"
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="@color/maps_floorpicker_black"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/id"
        android:layout_below="@id/textView"
        android:contentDescription="@string/nothing" />

    <EditText
        android:id="@+id/id_petugas"
        android:layout_below="@id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/user_icon"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_toEndOf="@id/user_icon"
        android:autofillHints="@string/id"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/password"
        android:layout_below="@id/id_petugas"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/nothing" />

    <EditText
        android:id="@+id/password_petugas"
        android:layout_toRightOf="@id/password_icon"
        android:layout_below="@id/id_petugas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_toEndOf="@id/password_icon"
        android:autofillHints="@string/password"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_below="@id/password_petugas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:textColor="@color/gmm_white"
        android:text="@string/login" />


</RelativeLayout>